Also search participants with their id

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -162,6 +162,7 @@ menu.logout=Uitloggen
 
 #Search related messages
 search.for.organisation=Organisatie
+search.for.id=ID (#)
 search.for.name=Naam
 search.for.address=Adres
 
