--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -162,6 +162,7 @@ menu.logout=Log out
 
 #Search related messages
 search.for.organisation=Organisation
+search.for.id=ID (#)
 search.for.name=Name
 search.for.address=Address
 
