Added favorite sessions misc page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -610,3 +610,4 @@ misc.sessionsWithoutOrganizer=Sessions without organizer
 misc.sessionsWithoutChair=Sessions without chair
 misc.participantsNoCountry=Participants without country
 misc.noPaymentAttempt=Participants without payment attempts
+misc.favoriteSessions=Favorite sessions
