--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -589,22 +589,23 @@ reviewCriteria.name.label=Naam
 reviewCriteria.sortOrder.label=Sorteer volgorde
 
 # Misc related pages
-misc.lastNameUpperCase=Last name lower/upper case
-misc.firstNameUpperCase=First name lower/upper case
-misc.cityUpperCase=City lower/upper case
-misc.organisationUpperCase=Organisation lower/upper case
-misc.sessionSameName=Sessions with same name
-misc.sessionWithoutNetwork=Sessions without network
-misc.sessionCoAuthor=Sessions with co-authors
-misc.paperSameTitle=Papers with same title
-misc.multiplePapers=Multiple papers
-misc.authorDelSession=Authors in deleted sessions
+misc.lastNameUpperCase=Achternaam wel/geen hoofdleters
+misc.firstNameUpperCase=Voornaam wel/geen hoofdleters
+misc.cityUpperCase=Stad wel/geen hoofdleters
+misc.organisationUpperCase=Organisatie wel/geen hoofdleters
+misc.sessionSameName=Sessies met dezelfde naam
+misc.sessionWithoutNetwork=Sessies zonder netwerk
+misc.sessionCoAuthor=Sessies me co-auteurs
+misc.paperSameTitle=Papers met dezelfde titel
+misc.multiplePapers=Meerdere papers
+misc.authorDelSession=Auteurs in verwijderde sessies
 misc.award=Award
-misc.notRegisteredChairs=Not registered chairs
-misc.multipleAccPapers=Multiple accepted papers
-misc.chairs=Alle chairs
+misc.notRegisteredChairs=Niet geregistreerde voorzitters
+misc.multipleAccPapers=Meerdere geaccepteerde papers
+misc.chairs=Alle voorzitters
 misc.participantsSameName=Deelnemers met dezelfde naam
 misc.sessionsWithoutOrganizer=Sessies zonder organizer
 misc.sessionsWithoutChair=Sessies zonder chair
 misc.participantsNoCountry=Deelnemers zonder land
 misc.noPaymentAttempt=Deelnemers zonder betalings pogingen
+misc.favoriteSessions=Favoriete sessies
