Paper types implemented

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -427,7 +427,7 @@ paper.multiple.label=Papers
 paper.title.label=Title
 paper.coAuthors.label=Co-authors
 paper.abstr.label=Abstract
-paper.typeOfContribution.label=Type of contribution
+paper.type.label=Paper type
 paper.reviewComment.label=Review comments
 paper.comment.label=Additional comments
 paper.networkProposal.label=Network proposal
@@ -458,6 +458,11 @@ paperList.state.label=Paper state
 paperState.label=Paper state
 paperState.multiple.label=Paper states
 paperState.description.label=Description
+
+# Paper type related messages
+paperType.label=Paper type
+paperType.multiple.label=Paper types
+paperType.type.label=Type
 
 # Session date/time related messages
 sessionDateTime.label=Date/time
