--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -427,7 +427,7 @@ paper.multiple.label=Documenten
 paper.title.label=Titel
 paper.coAuthors.label=Co-auteurs
 paper.abstr.label=Korte inhoud
-paper.typeOfContribution.label=Vorm van bijdrage
+paper.type.label=Type bijdrage
 paper.reviewComment.label=Review commentaar
 paper.comment.label=Overig commentaar
 paper.networkProposal.label=Netwerk voorstel
@@ -458,6 +458,11 @@ paperList.state.label=Document status
 paperState.label=Document status
 paperState.multiple.label=Document statussen
 paperState.description.label=Beschrijving
+
+# Paper type related messages
+paperType.label=Document type
+paperType.multiple.label=Document types
+paperType.type.label=Type
 
 # Session date/time related messages
 sessionDateTime.label=Datum/tijd
