Add CSV import, add new fields for paper reviews and add reviewer role

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -24,6 +24,7 @@ default.boolean.true=True
 default.boolean.false=False
 default.count=Count
 default.goto=Go to
+default.file=File
 default.date.format=EEE MMMMM d, yyyy
 default.date.form.format=MM/dd/yyyy
 default.date.day.format=EEE MMM dd
@@ -32,6 +33,8 @@ default.number.format=0
 default.access.denied=Denied
 default.access.not.denied=Not denied
 default.export.data=Export data
+default.import.csv.data=Import CSV
+default.sep.csv.data=CSV separator
 default.filter.on=Filter on
 default.total=Total
 default.totals.filtered=Total (with filters)
@@ -58,6 +61,7 @@ default.does.not.exist=This page does not exist
 default.does.not.exist.message=Unfortunately this page does not exist
 default.merge.success.message=The merge was successful
 default.merge.fail.message=The merge could not be performed. Please contact the servicedesk!
+default.import.success.message=The import was successful
 
 default.search.empty.message=No items to display
 default.search.nothing.found.message=Nothing found
@@ -86,6 +90,7 @@ default.overview.menu.label=Overviews menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
 default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Export
+default.import.menu.label=Import
 default.program.label=Programme at a glance
 default.online.programme.label=Online programme
 default.deleted.label=Delete
@@ -440,6 +445,8 @@ paper.review.label=Review
 paper.reviews.label=Reviews
 paper.reviewer.label=Reviewer
 paper.reviewers.label=Reviewers
+paper.reviewComments.label=Comments
+paper.reviewAward.label=Eligible for award?
 paper.avgReviewScore.label=Average score
 paper.equipmentComment.label=Equipment comment
 paper.networks.sessions.info.label=Networks & Sessions information
@@ -589,11 +596,17 @@ payment.show.all=Show all participants
 payment.show.not.payed=Show all participants without any payment attempts
 payment.show.not.completed=Show all participants with an uncompleted payment
 
-# ReviewCriteria related messages
+# Review criteria related messages
 reviewCriteria.label=Review criteria
 reviewCriteria.multiple.label=Review criteria
 reviewCriteria.name.label=Name
 reviewCriteria.sortOrder.label=Sort order
+
+# Reviewer related messages
+reviewer.label=Reviewer
+reviewer.multiple.label=Reviewers
+reviewer.user.label=Reviewer
+reviewer.confirmed.label=Has accepted?
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
