--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -24,6 +24,7 @@ default.boolean.true=Ja
 default.boolean.false=Nee
 default.count=Teller
 default.goto=Ga naar
+default.file=File
 default.date.format=EEE d MMMMM yyyy
 default.date.form.format=dd-MM-yyyy
 default.date.day.format=EEE dd MMM
@@ -32,6 +33,8 @@ default.number.format=0
 default.access.denied=Geen toegang
 default.access.not.denied=Toegang
 default.export.data=Export data
+default.import.csv.data=Importeer CSV
+default.sep.csv.data=CSV scheidingsteken
 default.filter.on=Filter op
 default.total=Totaal
 default.totals.filtered=Totaal (met filters)
@@ -58,6 +61,7 @@ default.does.not.exist=Deze pagina bestaat niet
 default.does.not.exist.message=Helaas bestaat deze pagina niet
 default.merge.success.message=De samenvoeging was succesvol
 default.merge.fail.message=De samenvoeging kon helaas niet worden voltooid. Neem contact op met de servicedesk!
+default.import.success.message=De importeer actie was succesvol
 
 default.search.empty.message=Geen items om weer te geven
 default.search.nothing.found.message=Niks gevonden
@@ -86,6 +90,7 @@ default.overview.menu.label=Overzichten menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
 default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Exporteer
+default.import.menu.label=Importeer
 default.program.label=Programma overzicht
 default.online.programme.label=Online programma
 default.deleted.label=Verwijderen
@@ -440,6 +445,8 @@ paper.review.label=Review
 paper.reviews.label=Reviews
 paper.reviewer.label=Reviewer
 paper.reviewers.label=Reviewers
+paper.reviewComments.label=Commentaar
+paper.reviewAward.label=Geschikt voor award?
 paper.avgReviewScore.label=Gemiddelde score
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
@@ -587,11 +594,17 @@ payment.show.all=Toon alle deelnemers
 payment.show.not.payed=Toon alle deelnemers zonder betalings pogingen
 payment.show.not.completed=Toon alle deelnemers met een betaling die nog niet is afgerond
 
-# ReviewCriteria related messages
+# Review criteria related messages
 reviewCriteria.label=Beoordelings criteria
 reviewCriteria.multiple.label=Beoordelings criteria
 reviewCriteria.name.label=Naam
 reviewCriteria.sortOrder.label=Sorteer volgorde
+
+# Reviewer related messages
+reviewer.label=Reviewer
+reviewer.multiple.label=Reviewers
+reviewer.user.label=Reviewer
+reviewer.confirmed.label=Heeft geaccepteerd?
 
 # Misc related pages
 misc.lastNameUpperCase=Achternaam wel/geen hoofdleters
