Add student fee

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -335,6 +335,7 @@ feeState.label=Fee state
 feeState.multiple.label=Fee states
 feeState.name.label=Name
 feeState.isDefaultFee.label=Is default fee
+feeState.isStudentFee.label=Is student fee
 feeState.isAccompanyingPersonFee.label=Is accompanying person fee
 
 # Fee amount related messages
