--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -335,6 +335,7 @@ feeState.label=Vergoedingsstatus
 feeState.multiple.label=Vergoedingsstatussen
 feeState.name.label=Naam
 feeState.isDefaultFee.label=Is standaard vergoeding
+feeState.isStudentFee.label=Is student vergoeding
 feeState.isAccompanyingPersonFee.label=Is vergoeding voor extra personen
 
 # Fee amount related messages
