Add dietary wishes to form

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -208,6 +208,12 @@ user.organisation.label=Organisation
 user.department.label=Department
 user.education.label=Education
 user.cv.label=CV
+user.dietaryWishes.label=Dietary wish
+user.otherDietaryWishes.label=Other dietary wish
+user.dietaryWishes.0=Other
+user.dietaryWishes.1=Carnivore
+user.dietaryWishes.2=Pescatarian
+user.dietaryWishes.3=Vegetarian
 user.extraInfo.label=Extra information about person
 user.dateAdded.label=Date added
 user.personalInfo.label=Personal information
