--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -208,6 +208,12 @@ user.organisation.label=Organisatie
 user.department.label=Afdeling
 user.education.label=Opleiding
 user.cv.label=CV
+user.dietaryWishes.label=Dieet wens
+user.dietaryWishes.0=Anders
+user.dietaryWishes.1=Carnivoor
+user.dietaryWishes.2=Prescotariër
+user.dietaryWishes.3=Vegetariër
+user.otherDietaryWishes.label=Ander dieet wens
 user.extraInfo.label=Extra informatie over persoon
 user.dateAdded.label=Datum toegevoegd
 user.personalInfo.label=Persoonlijke informatie
