Fix badges export

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -403,8 +403,8 @@ participantDate.other.state.label=Deelnemers met een andere status
 participantDate.presence.label=Aanwezig
 participantDate.badges.label=Badges
 participantDate.badges.payed.label=Badges (betaald)
-participantDate.badges.not.payed.label=Badges (niet betaald)
-participantDate.badges.unconfirmed.label=Badges (niet bevestigde bank overschrijvingen)
+participantDate.badges.not.payed.label=Badges (niet online betaald of geen poging gedaan)
+participantDate.badges.unconfirmed.label=Badges (niet bevestigde bank overschrijvingen of betaling op locatie)
 
 # Participant type related messages
 participantType.label=Deelnemer type
