Remove logging from post payment action and add refunds to payment statistics

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -586,18 +586,20 @@ order.free.label=Free
 payment.label=Payment
 payment.multiple.label=Payments
 payment.no.attempt.label=No payment attempt made
+payment.refund.label=Payment refunded
 payment.not.completed.label=Not completed payment
 payment.by.payment.method.label=By payment method
 payment.by.amount.label=By amount
 payment.by.participant.state.label=By participant state
 payment.unconfirmed.label=Unconfirmed
 payment.confirmed.label=Confirmed
-payment.total.label=Total
+payment.refunded.label=Refunded
 payment.total.participants.label=Total number of participants (Participants with state 1,2 only)
 payment.number.participants.label=Number of participants
 payment.number.payed.label=Total payed
 payment.number.not.completed.label=Total payment not completed
 payment.number.no.attempt.label=Total without any payment attempts
+payment.number.refunded.label=Total refunded
 payment.go.to.statistics.label=Go to payment statistics
 payment.show.all=Show all participants
 payment.show.not.payed=Show all participants without any payment attempts
