--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -584,18 +584,20 @@ order.free.label=Gratis
 payment.label=Payment
 payment.multiple.label=Payments
 payment.no.attempt.label=Geen poging tot betaling
+payment.refund.label=Betaling teruggestort
 payment.not.completed.label=Betaling niet afgerond
 payment.by.payment.method.label=Per betalingsmethode
 payment.by.amount.label=Per bedrag
 payment.by.participant.state.label=Per deelnemer status
 payment.unconfirmed.label=Niet bevestiged
 payment.confirmed.label=Bevestigd
-payment.total.label=Totaal
+payment.refunded.label=Teruggestort
 payment.total.participants.label=Totaal aantal deelnemers (Alleen deelnemers met status 1,2)
 payment.number.participants.label=Aantal deelnemers
 payment.number.payed.label=Totaal betaald
 payment.number.not.completed.label=Totaal betaling niet afgerond
 payment.number.no.attempt.label=Totaal zonder enkele betalings poging
+payment.number.refunded.label=Totaal teruggestort
 payment.go.to.statistics.label=Ga naar betalingsstatistieken
 payment.show.all=Toon alle deelnemers
 payment.show.not.payed=Toon alle deelnemers zonder betalings pogingen
