Add query types overview page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -39,6 +39,8 @@ default.filter.on=Filter on
 default.total=Total
 default.totals.filtered=Total (with filters)
 default.totals.not.filtered=Total (without filters)
+default.queryType=Query type
+default.queryTypes=Query types
 default.last.updated=Last updated
 default.back.to.top=Back to top
 default.please.wait=Please wait...
@@ -557,6 +559,7 @@ email.date.created.label=Date/time created
 email.date.sent.label=Date/time sent
 email.original.sent.label=Original email sent
 email.copies.sent.label=Copies of this email sent
+email.receivers.label=Show receivers
 email.background.message=Email for {0} participant(s) is being processed in the background, you may leave this page
 
 # Order related messages
