Change the boolean translations

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -20,8 +20,8 @@ default.exists.message="{0}" already exists as {1}
 
 default.paginate.prev=Previous
 default.paginate.next=Next
-default.boolean.true=True
-default.boolean.false=False
+default.boolean.true=Yes
+default.boolean.false=No
 default.count=Count
 default.goto=Go to
 default.file=File
