Add sorting order for papers in a session

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -456,6 +456,7 @@ paper.reviewer.label=Reviewer
 paper.reviewers.label=Reviewers
 paper.reviewComments.label=Comments
 paper.reviewAward.label=Eligible for award?
+paper.sortOrder.label=Sort order
 paper.avgReviewScore.label=Average score
 paper.equipmentComment.label=Equipment comment
 paper.networks.sessions.info.label=Networks & Sessions information
