--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -456,6 +456,7 @@ paper.reviewer.label=Reviewer
 paper.reviewers.label=Reviewers
 paper.reviewComments.label=Commentaar
 paper.reviewAward.label=Geschikt voor award?
+paper.sortOrder.label=Sorteer volgorde
 paper.avgReviewScore.label=Gemiddelde score
 paper.equipmentComment.label=Apparatuur commentaar
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
