--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -448,6 +448,7 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
+paper.keywords.label=Sleutelwoorden
 paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
 paper.review.label=Review
