Add co-authors to papers instead of sessions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -439,7 +439,9 @@ volunteering.description.label=Description
 paper.label=Paper
 paper.multiple.label=Papers
 paper.title.label=Title
+paper.coAuthor.label=Co-author
 paper.coAuthors.label=Co-authors
+paper.sessionCoAuthors.label=Co-authors in session
 paper.abstr.label=Abstract
 paper.type.label=Paper type
 paper.reviewComment.label=Review comments
@@ -460,6 +462,9 @@ paper.reviewAward.label=Eligible for award?
 paper.sortOrder.label=Sort order
 paper.avgReviewScore.label=Average score
 paper.equipmentComment.label=Equipment comment
+paper.authorOf.label=Author of
+paper.coAuthorOf.label=Co-author of
+paper.allCoAuthors.label=All co-authors
 paper.networks.sessions.info.label=Networks & Sessions information
 paper.validation.max.message=You exceeded the maximum number of papers allowed per participant
 
