--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -439,7 +439,9 @@ volunteering.description.label=Beschrijving
 paper.label=Document
 paper.multiple.label=Documenten
 paper.title.label=Titel
+paper.coAuthor.label=Co-auteur
 paper.coAuthors.label=Co-auteurs
+paper.sessionCoAuthors.label=Co-auteurs in sessie
 paper.abstr.label=Korte inhoud
 paper.type.label=Type bijdrage
 paper.reviewComment.label=Review commentaar
@@ -460,6 +462,9 @@ paper.reviewAward.label=Geschikt voor award?
 paper.sortOrder.label=Sorteer volgorde
 paper.avgReviewScore.label=Gemiddelde score
 paper.equipmentComment.label=Apparatuur commentaar
+paper.authorOf.label=Auteur van
+paper.coAuthorOf.label=Co-auteur van
+paper.allCoAuthors.label=Alle co-auteurs
 paper.networks.sessions.info.label=Netwerken & Sessies informatie
 paper.validation.max.message=U heeft het maximum van documenten per deelnemer al bereikt
 
