Show opt-in in participant overview

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -210,6 +210,7 @@ user.organisation.label=Organisation
 user.department.label=Department
 user.education.label=Education
 user.cv.label=CV
+user.optIn.label=Opt-in
 user.dietaryWishes.label=Dietary wish
 user.otherDietaryWishes.label=Other dietary wish
 user.dietaryWishes.0=Other
