--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -210,6 +210,7 @@ user.organisation.label=Organisatie
 user.department.label=Afdeling
 user.education.label=Opleiding
 user.cv.label=CV
+user.optIn.label=Opt-in
 user.dietaryWishes.label=Dieet wens
 user.dietaryWishes.0=Anders
 user.dietaryWishes.1=Carnivoor
