Add support for keywords

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -451,6 +451,7 @@ paper.networkProposal.label=Netwerk voorstel
 paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
+paper.keyword.label=Sleutelwoord
 paper.keywords.label=Sleutelwoorden
 paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
@@ -625,6 +626,11 @@ reviewer.label=Reviewer
 reviewer.multiple.label=Reviewers
 reviewer.user.label=Reviewer
 reviewer.confirmed.label=Heeft geaccepteerd?
+
+# Keyword related messages
+keyword.label=Sleutelwoord
+keyword.multiple.label=Sleutelwoorden
+keyword.keyword.label=Sleutelwoord
 
 # Misc related pages
 misc.lastNameUpperCase=Achternaam wel/geen hoofdleters
