--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -451,6 +451,7 @@ paper.networkProposal.label=Network proposal
 paper.sessionProposal.label=Session proposal
 paper.proposalDescription.label=Proposal description
 paper.state.label=Paper state
+paper.keyword.label=Keyword
 paper.keywords.label=Keywords
 paper.file.label=Uploaded paper
 paper.file.upload.label=Upload paper
@@ -627,6 +628,11 @@ reviewer.label=Reviewer
 reviewer.multiple.label=Reviewers
 reviewer.user.label=Reviewer
 reviewer.confirmed.label=Has accepted?
+
+# Keyword related messages
+keyword.label=Keyword
+keyword.multiple.label=Keywords
+keyword.keyword.label=Keyword
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
