Add support for keywords

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -475,7 +475,7 @@ paperList.multiple.label=Documenten
 paperList.title.label=Titel
 paperList.networkProposal.label=Netwerk voorstel
 paperList.sessionProposal.label=Sessie voorstel
-paperList.review.label=Review
+paperList.reviews.label=Reviews
 paperList.avgReviewScore.label=Gemiddelde score
 paperList.state.label=Document status
 
@@ -584,12 +584,14 @@ order.status.refund.ogone.label=Online terugbetaling
 order.status.refund.bank.label=Bank terugbetaling
 order.method.label=Payment method
 order.method.bank.label=Bank betaling
+order.method.ogone.label=Online betaling
 order.method.cash.label=Cash betaling
 order.created.at.label=Gecre\u00eberd op
 order.updated.at.label=Update op
 order.refunded.at.label=Terug betaald op
 order.description.label=Beschrijving
 order.set.payed.label=Betaling bevestingen
+order.refund.payment.label=Terug betaling
 order.free.label=Gratis
 
 # Payment related messages
