Add support for multiple keywords

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -452,7 +452,7 @@ paper.sessionProposal.label=Sessie voorstel
 paper.proposalDescription.label=Voorstel beschrijving
 paper.state.label=Document status
 paper.keyword.label=Sleutelwoord
-paper.keywords.label=Sleutelwoorden
+paper.keywords.label=Sleutelwoorden in groep \"{0}\"
 paper.file.label=Ge\u00c3\u00bcploade document
 paper.file.upload.label=Upload document
 paper.review.label=Review
