--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -452,7 +452,7 @@ paper.sessionProposal.label=Session proposal
 paper.proposalDescription.label=Proposal description
 paper.state.label=Paper state
 paper.keyword.label=Keyword
-paper.keywords.label=Keywords
+paper.keywords.label=Keywords in group \"{0}\"
 paper.file.label=Uploaded paper
 paper.file.upload.label=Upload paper
 paper.review.label=Review
