Add support for multiple keywords

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -632,6 +632,7 @@ reviewer.confirmed.label=Has accepted?
 # Keyword related messages
 keyword.label=Keyword
 keyword.multiple.label=Keywords
+keyword.groupName.label=Group
 keyword.keyword.label=Keyword
 
 # Misc related pages
