--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -632,6 +632,7 @@ reviewer.confirmed.label=Heeft geaccepteerd?
 # Keyword related messages
 keyword.label=Sleutelwoord
 keyword.multiple.label=Sleutelwoorden
+keyword.groupName.label=Groep
 keyword.keyword.label=Sleutelwoord
 
 # Misc related pages
