New extra info field for sessions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -308,6 +308,7 @@ session.multiple.accepted.label=Accepted sessions
 session.code.label=Code
 session.name.label=Name
 session.abstr.label=Abstract
+session.extraInfo.label=Extra information
 session.comment.label=Comment
 session.state.label=Session state
 session.type.label=Session type
