--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -308,6 +308,7 @@ session.multiple.accepted.label=Geaccepteerde sessies
 session.code.label=Code
 session.name.label=Naam
 session.abstr.label=Abstract
+session.extraInfo.label=Extra informatie
 session.comment.label=Commentaar
 session.state.label=Sessie status
 session.type.label=Sessie type
