extra overzicht lijst organisaties

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -640,6 +640,7 @@ keyword.keyword.label=Keyword
 misc.lastNameUpperCase=Last name lower/upper case
 misc.firstNameUpperCase=First name lower/upper case
 misc.cityUpperCase=City lower/upper case
+misc.listOrganisations=List of Organisations
 misc.organisationUpperCase=Organisation lower/upper case
 misc.sessionSameName=Sessions with same name
 misc.sessionWithoutNetwork=Sessions without network
