--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -640,6 +640,7 @@ keyword.keyword.label=Sleutelwoord
 misc.lastNameUpperCase=Achternaam wel/geen hoofdleters
 misc.firstNameUpperCase=Voornaam wel/geen hoofdleters
 misc.cityUpperCase=Stad wel/geen hoofdleters
+misc.listOrganisations=Lijst van Organisaties
 misc.organisationUpperCase=Organisatie wel/geen hoofdleters
 misc.sessionSameName=Sessies met dezelfde naam
 misc.sessionWithoutNetwork=Sessies zonder netwerk
