Not cancelled registrations not accepted papers

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -658,3 +658,4 @@ misc.sessionsWithoutChair=Sessions without chair
 misc.participantsNoCountry=Participants without country
 misc.noPaymentAttempt=Participants without payment attempts
 misc.favoriteSessions=Favorite sessions
+misc.notCancelledNotAccepted=Not cancelled registrations with not accepted papers
