--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -658,3 +658,4 @@ misc.sessionsWithoutChair=Sessies zonder chair
 misc.participantsNoCountry=Deelnemers zonder land
 misc.noPaymentAttempt=Deelnemers zonder betalings pogingen
 misc.favoriteSessions=Favoriete sessies
+misc.notCancelledNotAccepted=Niet geannuleerde registraties met niet geaccepteerde paper
