allow late payment

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -379,6 +379,7 @@ participantDate.invitationLetterSent.label=Sent
 participantDate.invitationLetter.label=Invitation letter
 participantDate.lowerFeeRequested.label=Requested
 participantDate.lowerFeeAnswered.label=Answered
+participantDate.allowLatePayment.label=Allow paying after final registration closed
 participantDate.lowerFee.label=Lower fee
 participantDate.lowerFeeText.label=Description
 participantDate.student.label=Student
