--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -379,6 +379,7 @@ participantDate.invitationLetterSent.label=Verzonden
 participantDate.invitationLetter.label=Uitnodigingsbrief
 participantDate.lowerFeeRequested.label=Aangevraagd
 participantDate.lowerFeeAnswered.label=Beantwoord
+participantDate.allowLatePayment.label=Toestaan late betaling
 participantDate.lowerFee.label=Lagere vergoeding
 participantDate.lowerFeeText.label=Beschrijving
 participantDate.student.label=Student
