Sessions without discussant

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -656,6 +656,7 @@ misc.chairs=All chairs
 misc.participantsSameName=Participants with the same name
 misc.sessionsWithoutOrganizer=Sessions without organizer
 misc.sessionsWithoutChair=Sessions without chair
+misc.sessionsWithoutDiscussant=Sessions without discussant
 misc.sessionsWithoutModerator=Sessions without moderator
 misc.participantsNoCountry=Participants without country
 misc.noPaymentAttempt=Participants without payment attempts
