--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -656,6 +656,7 @@ misc.chairs=Alle voorzitters
 misc.participantsSameName=Deelnemers met dezelfde naam
 misc.sessionsWithoutOrganizer=Sessies zonder organizer
 misc.sessionsWithoutChair=Sessies zonder chair
+misc.sessionsWithoutDiscussant=Sessies zonder discussant
 misc.sessionsWithoutModerator=Sessies zonder moderator
 misc.participantsNoCountry=Deelnemers zonder land
 misc.noPaymentAttempt=Deelnemers zonder betalings pogingen
