active participants exports

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -410,6 +410,7 @@ participantDate.badges.label=Badges
 participantDate.badges.payed.label=Badges (betaald)
 participantDate.badges.not.payed.label=Badges (niet online betaald of geen poging gedaan)
 participantDate.badges.unconfirmed.label=Badges (niet bevestigde bank overschrijvingen of betaling op locatie)
+participantDate.participants.label=Participants
 
 # Participant type related messages
 participantType.label=Deelnemer type
