--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -410,6 +410,7 @@ participantDate.badges.label=Badges
 participantDate.badges.payed.label=Badges (payed)
 participantDate.badges.not.payed.label=Badges (not payed online or no attempt)
 participantDate.badges.unconfirmed.label=Badges (unconfirmed bank transfers and on-site payments)
+participantDate.participants.label=Participants
 
 # Participant type related messages
 participantType.label=Participant type
