presence more clear

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -406,6 +406,7 @@ participantDate.paymentIdNoPayment.label=Payment id found, but no payment made y
 participantDate.total.label=Number of participants
 participantDate.other.state.label=Participants with other states
 participantDate.presence.label=Presence
+participantDate.presence.description.label=When will the participant be present<br>(this is used for session planning)
 participantDate.badges.label=Badges
 participantDate.badges.payed.label=Badges (payed)
 participantDate.badges.not.payed.label=Badges (not payed online or no attempt)
@@ -538,7 +539,7 @@ participantDay.label=Participant day
 participantDay.multiple.label=Participant days
 participantDay.user.label=User
 participantDay.day.label=Day
-participantDay.is.present.label=This participant has indicated to be present on the following days:
+participantDay.is.present.label=This participant has indicated to be present on the following days:<br>(this is only for final payment, for session planning see tab 'Personal info')
 participantDay.not.found.label=No days found
 
 # ElectionsAdvisoryBoard related messages
