--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -406,6 +406,7 @@ participantDate.paymentIdNoPayment.label=Betalings id gevonden, maar er is nog g
 participantDate.total.label=Aantal deelnemers
 participantDate.other.state.label=Deelnemers met een andere status
 participantDate.presence.label=Aanwezig
+participantDate.presence.description.label=Wanneer zal de deelnemer aanwezig zijn<br>(dit wordt gebruikt bij sessie planning)
 participantDate.badges.label=Badges
 participantDate.badges.payed.label=Badges (betaald)
 participantDate.badges.not.payed.label=Badges (niet online betaald of geen poging gedaan)
@@ -538,7 +539,7 @@ participantDay.label=Deelnemer dag
 participantDay.multiple.label=Deelnemer dagen
 participantDay.user.label=Gebruiker
 participantDay.day.label=Dag
-participantDay.is.present.label=Deze deelnemer heeft aangegeven op de volgende dagen aanwezig te zijn:
+participantDay.is.present.label=Deze deelnemer heeft aangegeven op de volgende dagen aanwezig te zijn:<br>(dit is alleen voor final payment, voor sessie planning zie tab 'Personal info')
 participantDay.not.found.label=Geen dagen gevonden
 
 # ElectionsAdvisoryBoard related messages
